--- a/HTML/文字与段落.md
+++ b/HTML/文字与段落.md
@@ -1,11 +1,34 @@
 ## 基本的文字排版
 
-- [ ] <p>段落</p>
-- [ ] 换行，空标记<br/>
-- [ ] 预格式化<pre></pre>，用于保留原码的排列方式
-- [ ] 水平线，空标记<hr/>
-- [ ] 标题文字
+- [ ] 段落
+
+    ```html
+    <p>段落</p>
     ```
+
+- [ ] 换行，空标记
+
+    ```html
+    <br/>
+    ```
+
+- [ ] 预格式化，用于保留原码的排列方式
+
+    ```html
+    <pre>
+    预格式化的内容
+    </pre>
+    ```
+
+- [ ] 水平线，空标记
+
+    ```html
+    <hr/>
+    ```
+
+- [ ] 标题文字
+
+    ```html
     <h1>标题1</h1>
     <h2>标题2</h2>
     <h3>标题3</h3>
@@ -14,13 +37,41 @@
     <h6>标题6</h6>
     <p>正文</p>
     ```
+
 ## 描述文本的语义化、结构化元素
+
 - [ ] 文本强调
-    - [ ] 文体突出，加粗<b>重要文本</b>
-    - [ ] 与文中其余部分不同的部分，倾斜<i>不同的文本</i>
-    - [ ] 强调的文本，倾斜<em>强调的文本</em>
-    - [ ] 重要的文本，加粗<strong>重要的文本</strong>
-    - [ ] 文字加下划线，<u>...</u>
+
+    1. 文体突出，加粗
+
+    ```html
+    <b>重要文本</b>
+    ```
+
+    2. 与文中其余部分不同的部分，倾斜
+
+    ```html
+    <i>不同的文本</i>
+    ```
+
+    3. 强调的文本，倾斜
+
+    ```html
+    <em>强调的文本</em>
+    ```
+
+    4. 重要的文本，加粗
+
+    ```html
+    <strong>重要的文本</strong>
+    ```
+
+    5. 文字加下划线
+
+    ```html
+    <u>...</u>
+    ```
+
 - [ ] 作品标题<cite> <<逍遥游>> <cite>
 - [ ] 小型文本<small><small>
 
@@ -32,18 +83,27 @@
     ```html
     <p>鸟宿池边树，僧<del>敲</del><ins>推</ins>月下门</p>
     ```
-- [ ] 文本上下标<sup>/<sub>
-    
+- [ ] 文本上下标
+
     x的平方
     ```html
     x<sup>2</sup>
     ```
+
     x下标1
-    ```
+
+    ```html
     x<sub>1</sub>
     ```
-- [ ] 旁注<ruby>/<rt>/<rp>
-- [ ] 日期时间<time></time>
+
+- [ ] 旁注
+
+    ```html
+    <ruby>/<rt>/<rp>
+    ```
+
+- [ ] 日期时间
+
     ```html
     <time datetime="" pubdate="">元素内容</time>
     ```
@@ -55,8 +115,13 @@
     
 ## 无语义的容器元素
 
-- [ ] <div>
-- [ ] <span>
+```html
+<div>
+```
+
+```html
+<span>
+```
 
 ## 转译字符
 
@@ -85,9 +150,9 @@ HTML常用特殊字符及其代码
 
 1. 无序列表
 
-    类似word中的项目符号，使用<ul>...</ul>标记，需要为每一个列表项使用<li>...</li>标记对.
-    
-```html5
+    类似word中的项目符号，使用`<ul>...</ul>`标记，需要为每一个列表项使用`<li>...</li>`标记对.
+
+```html
 <ul>
     <li>列表项</li>
     <li>列表项</li>
@@ -98,9 +163,9 @@ HTML常用特殊字符及其代码
 
 2. 有序列表
 
-    类似word中的编号列表，使用<ol>...</ol>标记，需要为每一个列表项使用<li>...</li>标记对.
+    类似word中的编号列表，使用`<ol>...</ol>`标记，需要为每一个列表项使用`<li>...</li>`标记对.
 
-```html5
+```html
 <ol>
     <li>列表项</li>
     <li>列表项</li>
@@ -109,7 +174,7 @@ HTML常用特殊字符及其代码
 </ol>
 ```
 
-<ol>标记的属性
+`<ol>`标记的属性
 
 |属性|值|描述|
 |:--:|:--:|:--:|
@@ -124,11 +189,10 @@ HTML常用特殊字符及其代码
 
 3. 描述列表
 
-    使用<dl>/<dt>/<dd>
-    
-    创建描述列表应使用描述列表标记<dl>, <dt>标记定义列表项，<dd>标记用于描述列表中的项目。一个<dl>中有多个<dt>，每个<dt>对应有多个<dd>元素。
-    
-    
+    使用`<dl>/<dt>/<dd>`
+
+    创建描述列表应使用描述列表标记`<dl>`, `<dt>`标记定义列表项，`<dd>`标记用于描述列表中的项目。一个`<dl>`中有多个`<dt>`，每个`<dt>`对应有多个`<dd>`元素。
+
 简述什么是HTML中的语义元素？
 
 语义及意义，HTML5的语义yu
