video audio embed

--- a/HTML/图像、音频、视频.md
+++ b/HTML/图像、音频、视频.md
@@ -1,12 +1,14 @@
+# HTML5中的图像、音频、视频
+
 ## 文件路径
 
 在网页设计中通过路径可以表示链接和插入图像、Flash、CSS文件、声音、视频文件的位置。
 
-#### 绝对路径
+### 绝对路径
 
 包含指向目录或文件的完整信息，包括模式、主机名和路径。
 
-#### 相对路径
+### 相对路径
 
 由这个文件所在的路径引起的跟其他文件（或文件夹）的路径关系。
 
@@ -14,3 +16,113 @@
 2. 引用子目录下的文件
 3. 引用上层目录的文件
 4. 根相对文件
+
+## 图像`<img>`
+
+1. 图像资源－－src属性
+
+    图像URL，指明所要引用图像的位置。
+
+```html
+<img src="url" />
+```
+
+2. 图像替代文本－－`alt`
+
+    当图像不能正常显示或者鼠标指向图像并暂停在图片上会显示替代文本。
+
+```html
+<img src="url" alt="替代文本" />
+```
+
+3. 图像的宽高－－width和height
+
+    指定图像的尺寸浏览器就可以预留空间。
+
+```html
+<img src="url" width="像素｜百分比" height="像素｜百分比" />
+```
+
+    像素：100px 或 100
+    百分比：50%
+
+## 视频`<video>`
+
+    支持格式 MP4、WenM、Ogg
+
+```html
+<video src="url" controls="controls" autoplay="autoplay" width="像素｜百分比" height="像素｜百分比" preload="auto|metadata|none" loop="loop">
+浏览器不支持video，会显示此部分内容
+</video>
+```
+
+`<video>`元素
+|属性|属性值|描述|
+|:--:|:--:|:--:|
+|src|url|设置要播放视频的URL(不能缺省)|
+|autoplay|autoplay|加载后自动播放|
+|controls|controls|添加浏览器为视频设置的默认控件|
+|loop|loop|循环播放|
+|muted|muted|静音|
+|preload|preload|none不加载任何视频；metadata仅加载视频的元数据；auto默认；引用autoplay则忽略该属性|
+|poster|url|指定视频加载时显的图片|
+|width|像素或百分比|宽度|
+|height|像素或百分比|高度|
+
+## 音频`<audio>`
+
+    支持 MP3、Ogg、Vorbis、WAV、MP4、AAC
+
+```html
+<audio src="url" controls="controls" autoplay="autoplay" preload="auto|metadata|none" loop="loop">
+浏览器不支持audio，会显示此部分内容
+</audio>
+```
+
+`<audio>`元素
+|属性|属性值|描述|
+|:--:|:--:|:--:|
+|src|url|设置要播放视频的URL(不能缺省)|
+|autoplay|autoplay|加载后自动播放|
+|controls|controls|添加浏览器为视频设置的默认控件|
+|loop|loop|循环播放|
+|preload|preload|none不加载任何视频；metadata仅加载视频的元数据；auto默认；引用autoplay则忽略该属性|
+
+
+## 使用多种来源的多媒体和备用文本`<source>`
+
+    比如兼容不同浏览器需要不同格式的视频
+
+```html
+<video width="369" height="208" controls="controls">
+<source src="hello.MP4" type="video/mp4">
+<source src="hello.webm" type="video/webm">
+浏览器不支持video，会显示此部分内容
+</video>
+```
+
+`<source>`元素
+|属性|属性值|描述|
+|:--:|:--:|:--:|
+|src|url|设置要播放视频的URL(不能缺省)|
+|type|video/mp4、video/webm、video/ogg|指定视频类型|
+|media|media query|指定CSS3媒体查询|
+
+## 插入多媒体文件`<embed>`
+
+    对于要求使用外部辅助应用程序或者插件的多媒体内容，如Adobe、Flash
+
+```html
+<embed src="url" width="" height="" type="类型"></embed>
+```
+
+## 定义媒介分组和标题`<figure>`/`<figcaption>`
+
+    `<figure>`元素用来规定独立的流内容，表示网站制作页面上一块独立的内容。`<figcaption>`元素代表`<figure>`元素的一个标题或者说是其相关的解释。
+
+```html
+<figure>
+<figcaption>标题</figcaption>
+...
+</figure>
+```
