--- a/HTML/文字与段落.md
+++ b/HTML/文字与段落.md
@@ -1,4 +1,4 @@
-## 基本的文字排版
+# 基本的文字排版
 
 - [ ] 段落
 
@@ -72,14 +72,28 @@
     <u>...</u>
     ```
 
-- [ ] 作品标题<cite> <<逍遥游>> <cite>
-- [ ] 小型文本<small><small>
+- [ ] 作品标题
+
+    ```html
+    <cite> <<逍遥游>> <cite>
+    ```
+
+- [ ] 小型文本
+
+    ```html
+    <small><small>
+    ```
 
         通常用于免责声明、注意事项、法律限制或版权声明，有时也用于新闻来源、许可要求等
 
-- [ ] 标记文本改变<ins>/<del>
+- [ ] 标记文本改变
+
+    ```html
+    <ins>/<del>
+    ```
 
         <ins>标记定义文档中的插入文本，和<del>一起用，描述对文档的更新和修正。
+
     ```html
     <p>鸟宿池边树，僧<del>敲</del><ins>推</ins>月下门</p>
     ```
@@ -112,7 +126,7 @@
 
     1、块级元素都是在新的一行显示内容，并且这些元素之后的内容也会另起一个新行。如<p>、<h1>~<h6>、<pre>、<address>、<header>、<nav>、<footer>等
     2、行内元素可以出现子啊某一行句子中而不必起新行。如<b>、<i>、<em>、<strong>、<sup>、<sub>、<small>、<ins>、<del>、<cite>等。
-    
+
 ## 无语义的容器元素
 
 ```html
